En la clase control ->Se crea una cola de envio de datos del clima.Función que lee los datos del clima de la cola declaracióm  función que envio datos de hum del suelo. En clase principal ->Se crea funcion que ejecuta lectura de datos del clima de la cola asignados a las variables globales. Se llama la función que envia datos a cola y se crea cola para lectura clima

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,14 @@ dkms.conf
 *.vscode
 sdkconfig.old
 *.DS_Store
+# Ignore build results
+build/
+build/log/
+# IAR Debug Obj
+/Obj/*.pbd
+/Obj/*.pbd.*
+/Obj/*.pbi
+/Obj/*.pbi.*
+
+# Log files
+*.log
